# react-native-sync-file

./: README.md  package.json  react-native-sync-file.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle
android/cpp/: jni-adapter.cpp
android/src/main/java/com/syncfile/: SyncFileModule.java  SyncFilePackage.java
cpp/: SyncFileBridge.cpp  SyncFileBridge.h
ios/: SyncFileModule.h  SyncFileModule.mm
src/: index.ts
